# QuanTAlib

./: $null  .codacy.yml  .coderabbit.batch2.yaml  .coderabbit.batch2b-validation.yaml  .coderabbit.yaml  .deepsource.toml  .editorconfig  .gitattributes  .gitignore  .nojekyll  AGENTS.md  Core.slnf  Directory.Build.props  GitVersion.yml  LICENSE  MCP_SETUP_INSTRUCTIONS.md  MODELS.md  QuanTAlib.code-workspace  QuanTAlib.sln  QuanTAlib.slnx  QuantLib.csproj  QuantLib.sln  README.md  _sidebar.md  build-output.txt  build.sh  build_core.ps1  coverlet.runsettings  errors.md  global.json  glossary.md  index.html  nuget.config  omnisharp.json  qodana.yaml  quantalib.code-workspace  quantalib.ndproj  rcs1118_violations.csv  sonar-suppressions.json  test_collection_expr.cs  (+1 more)
.bob/: mcp.json
.claude/: settings.local.json
.clinerules/: AGENTS.md  AGENTS.md.old  MODELS.md  good-indicator.md  indicator.md  techdocs.md  testprotocol.md  workspace.md
.clineworkflows/: review.md  rewrite-docs.md
.roo/: mcp.json
python/: Directory.Build.props  README.md  SPEC.md  publish.ps1  pyproject.toml  python.csproj
python/quantalib/: __init__.py  _bridge.py  _compat.py  _helpers.py  _loader.py  channels.py  core.py  cycles.py  dynamics.py  errors.py  filters.py  indicators.py  momentum.py  numerics.py  oscillators.py  py.typed  reversals.py  statistics.py  trends_fir.py  trends_iir.py  volatility.py  volume.py
python/src/: ArrayBridge.cs  Exports.Generated.cs  Exports.cs  StatusCodes.cs
python/tests/: analyze_unresolved_docs.py  benchmark.py  run_all_exported_pandasta_validation.py  test_arrow.py  test_category_labels.py  test_compat.py  test_compat_aliases.py  test_golden.py  test_helpers.py  test_module_imports.py  test_pandas_ta_parity.py  test_pandas_ta_parity_batch_01.py  test_polars.py  test_shapes.py  test_signatures.py  test_smoke.py  test_status_codes.py  update_validation_md_from_report.py
python/tests/reports/: pandas_ta_all_exported_report.md  pandas_ta_parity_batch_01_report.md
python/tools/: add_length_alias.py  complete_bridge.py  count_wrappers.py  diff_check.py  extract_sigs.py  fix_length_to_period.py  generate_category_modules.py  generate_missing_exports.py  generate_wrappers.py  validate_exports.py
temp_pandas_ta/pandas_ta-0.4.71b0/: .gitignore  CODE_OF_CONDUCT.md  LICENSE  PKG-INFO  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
temp_pandas_ta/pandas_ta-0.4.71b0/.github/workflows/: test.yml
temp_pandas_ta/pandas_ta-0.4.71b0/data/: ALT_D.csv
temp_pandas_ta/pandas_ta-0.4.71b0/src/pandas_ta/: _typing.py  core.py  ma.py
temp_pandas_ta/pandas_ta-0.4.71b0/src/pandas_ta/candle/: cdl_doji.py  cdl_inside.py  cdl_pattern.py  cdl_z.py  ha.py
temp_pandas_ta/pandas_ta-0.4.71b0/src/pandas_ta/cycle/: ebsw.py  reflex.py
temp_pandas_ta/pandas_ta-0.4.71b0/src/pandas_ta/momentum/: ao.py  apo.py  bias.py  bop.py  brar.py  cci.py  cfo.py  cg.py  cmo.py  coppock.py  crsi.py  cti.py  dm.py  er.py  eri.py  exhc.py  fisher.py  inertia.py  kdj.py  kst.py  macd.py  mom.py  pgo.py  ppo.py  psl.py  qqe.py  roc.py  rsi.py  rsx.py  rvgi.py  slope.py  smc.py  smi.py  squeeze.py  squeeze_pro.py  stc.py  stoch.py  stochf.py  stochrsi.py  tmo.py  (+4 more)
temp_pandas_ta/pandas_ta-0.4.71b0/src/pandas_ta/overlap/: alligator.py  alma.py  dema.py  ema.py  fwma.py  hilo.py  hl2.py  hlc3.py  hma.py  hwma.py  ichimoku.py  jma.py  kama.py  linreg.py  mama.py  mcgd.py  midpoint.py  midprice.py  ohlc4.py  pivots.py  pwma.py  rma.py  sinwma.py  sma.py  smma.py  ssf.py  ssf3.py  supertrend.py  swma.py  t3.py  tema.py  trima.py  vidya.py  wcp.py  wma.py  zlma.py
temp_pandas_ta/pandas_ta-0.4.71b0/src/pandas_ta/performance/: drawdown.py  log_return.py  percent_return.py
temp_pandas_ta/pandas_ta-0.4.71b0/src/pandas_ta/statistics/: entropy.py  kurtosis.py  mad.py  median.py  quantile.py  skew.py  stdev.py  tos_stdevall.py  variance.py  zscore.py
temp_pandas_ta/pandas_ta-0.4.71b0/src/pandas_ta/trend/: adx.py  alphatrend.py  amat.py  aroon.py  chop.py  cksp.py  decay.py  decreasing.py  dpo.py  ht_trendline.py  increasing.py  long_run.py  psar.py  qstick.py  rwi.py  short_run.py  trendflex.py  ttm_trend.py  vhf.py  vortex.py  zigzag.py
temp_pandas_ta/pandas_ta-0.4.71b0/src/pandas_ta/utils/: _candles.py  _core.py  _math.py  _numba.py  _signals.py  _study.py  _time.py  _validate.py
temp_pandas_ta/pandas_ta-0.4.71b0/src/pandas_ta/volatility/: aberration.py  accbands.py  atr.py  atrts.py  bbands.py  chandelier_exit.py  donchian.py  hwc.py  kc.py  massi.py  natr.py  pdist.py  rvi.py  thermo.py  true_range.py  ui.py
temp_pandas_ta/pandas_ta-0.4.71b0/src/pandas_ta/volume/: ad.py  adosc.py  aobv.py  cmf.py  efi.py  eom.py  kvo.py  mfi.py  nvi.py  obv.py  pvi.py  pvo.py  pvol.py  pvr.py  pvt.py  tsv.py  vhm.py  vp.py  vwap.py  vwma.py
temp_pandas_ta/pandas_ta-0.4.71b0/tests/: config.py  conftest.py  test_indicator_candle.py  test_indicator_cycles.py  test_indicator_momentum.py  test_indicator_overlap.py  test_indicator_performance.py  test_indicator_statistics.py  test_indicator_trend.py  test_indicator_volatility.py  test_indicator_volume.py  test_numba.py  test_studies.py  test_utils.py
(+5889 files in other folders)
