[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "quantalib"
dynamic = ["version"]
description = "High-performance technical analysis wrappers over QuanTAlib NativeAOT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
dev = ["pytest>=8.0", "pandas>=1.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # pandas-ta sets pd.options.mode.copy_on_write=False on import;
    # pandas >= 3.0 always enables CoW and emits Pandas4Warning.
    # This is a third-party issue — suppress it.
    "ignore::pandas.errors.Pandas4Warning",
]

[tool.hatch.version]
source = "regex"
path = "../lib/VERSION"
pattern = "(?P<version>\\d+\\.\\d+\\.\\d+)"

[tool.hatch.build.targets.wheel]
packages = ["quantalib"]

[tool.hatch.build.targets.wheel.force-include]
"quantalib/native" = "quantalib/native"